--- a/BeaconReceiver/Base.lproj/Main.storyboard
+++ b/BeaconReceiver/Base.lproj/Main.storyboard
@@ -71,12 +71,6 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Major:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4bX-me-Did">
-                                <rect key="frame" x="100" y="131" width="55" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Minor:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nYL-ff-KWk">
                                 <rect key="frame" x="100" y="160" width="55" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -114,6 +108,12 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KiU-04-Upy">
+                                <rect key="frame" x="100" y="131" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -121,10 +121,10 @@
                         <outlet property="Accuracy" destination="ci2-7w-Tq2" id="c5B-KD-x7V"/>
                         <outlet property="Distance" destination="q9G-z7-rw9" id="2dx-FR-Rdq"/>
                         <outlet property="Found" destination="DKo-se-3jZ" id="c14-WM-n6h"/>
-                        <outlet property="Major" destination="4bX-me-Did" id="4Lf-uV-HyH"/>
                         <outlet property="Minor" destination="nYL-ff-KWk" id="k9H-Sm-tm1"/>
                         <outlet property="RSSI" destination="QU1-3I-PJB" id="fgd-41-Zwt"/>
                         <outlet property="UUID" destination="Uq5-nh-tRa" id="Owl-86-KXp"/>
+                        <outlet property="major" destination="KiU-04-Upy" id="3lF-0j-d5X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
